Day05 recommendation and cross database query